--- a/operations/helm/charts/mimir-distributed/templates/monolithic/monolithic-svc.yaml
+++ b/operations/helm/charts/mimir-distributed/templates/monolithic/monolithic-svc.yaml
@@ -1,5 +1,5 @@
-{{- if eq .Values.deploymentMode "microservices" }}
-{{- $args := dict "ctx" $ "component" "store-gateway" "memberlist" true -}}
+{{- if eq .Values.deploymentMode "monolithic" }}
+{{- $args := dict "ctx" . "component" "monolithic" "memberlist" true -}}
 {{- $zonesMap := include "mimir.zoneAwareReplicationMap" $args | fromYaml -}}
 {{- range $zoneName, $rolloutZone := $zonesMap }}
 {{- with $ -}}
@@ -10,20 +10,20 @@ metadata:
   name: {{ include "mimir.resourceName" $args }}
   labels:
     {{- include "mimir.labels" $args | nindent 4 }}
-    {{- if and $zoneName .Values.store_gateway.zoneAwareReplication.migration.enabled }}
+    {{- if and $zoneName .Values.monolithic.zoneAwareReplication.migration.enabled }}
     # Prevent scraping PODs via this service during migration as the original non zone-aware service already scrapes all PODs and you get duplicate metrics.
     prometheus.io/service-monitor: "false"
     {{- end }}
-    {{- with .Values.store_gateway.service.labels }}
+    {{- with .Values.monolithic.service.labels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
   annotations:
-    {{- toYaml .Values.store_gateway.service.annotations | nindent 4 }}
+    {{- toYaml .Values.monolithic.service.annotations | nindent 4 }}
   namespace: {{ .Release.Namespace | quote }}
 spec:
   type: ClusterIP
   ports:
-    - port: {{ include "mimir.serverHttpListenPort" . }}
+    - port: {{ include "mimir.serverHttpListenPort" .}}
       protocol: TCP
       name: http-metrics
       targetPort: http-metrics
