--- a/operations/helm/charts/mimir-distributed/templates/ruler/ruler-dep.yaml
+++ b/operations/helm/charts/mimir-distributed/templates/ruler/ruler-dep.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.deploymentMode "microservices" }}
 {{- if .Values.ruler.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
@@ -141,3 +142,4 @@ spec:
         - name: active-queries
           emptyDir: {}
 {{- end -}}
+{{- end }}
