--- a/operations/helm/charts/mimir-distributed/templates/distributor/distributor-dep.yaml
+++ b/operations/helm/charts/mimir-distributed/templates/distributor/distributor-dep.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.deploymentMode "microservices" }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -139,4 +140,4 @@ spec:
           emptyDir: {}
         - name: active-queries
           emptyDir: {}
-
+{{- end }}
