--- a/operations/helm/charts/mimir-distributed/templates/gateway/gateway-dep.yaml
+++ b/operations/helm/charts/mimir-distributed/templates/gateway/gateway-dep.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.deploymentMode "microservices" }}
 {{- if (eq (include "mimir.gateway.isEnabled" .) "true") }}
 {{- with .Values.gateway }}
 {{- $isGEMGateway := $.Values.enterprise.enabled -}}
@@ -169,3 +170,4 @@ spec:
         {{- end }}
 {{- end -}}
 {{- end -}}
+{{- end }}
