--- a/operations/helm/charts/mimir-distributed/templates/monolithic/monolithic-svc-headless.yaml
+++ b/operations/helm/charts/mimir-distributed/templates/monolithic/monolithic-svc-headless.yaml
@@ -1,16 +1,16 @@
-{{- if eq .Values.deploymentMode "microservices" }}
+{{- if eq .Values.deploymentMode "monolithic" }}
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "mimir.resourceName" (dict "ctx" . "component" "store-gateway") }}-headless
+  name: {{ include "mimir.resourceName" (dict "ctx" . "component" "monolithic") }}-headless
   labels:
-    {{- include "mimir.labels" (dict "ctx" . "component" "store-gateway" "memberlist" true) | nindent 4 }}
+    {{- include "mimir.labels" (dict "ctx" . "component" "monolithic" "memberlist" true) | nindent 4 }}
     prometheus.io/service-monitor: "false"
-    {{- with .Values.store_gateway.service.labels }}
+    {{- with .Values.monolithic.service.labels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
   annotations:
-    {{- toYaml .Values.store_gateway.service.annotations | nindent 4 }}
+    {{- toYaml .Values.monolithic.service.annotations | nindent 4 }}
   namespace: {{ .Release.Namespace | quote }}
 spec:
   type: ClusterIP
@@ -25,5 +25,6 @@ spec:
       name: grpc
       targetPort: grpc
   selector:
-    {{- include "mimir.selectorLabels" (dict "ctx" . "component" "store-gateway" "memberlist" true) | nindent 4 }}
+    {{- include "mimir.selectorLabels" (dict "ctx" . "component" "monolithic" "memberlist" true) | nindent 4 }}
+  publishNotReadyAddresses: true
 {{- end }}
