--- a/operations/helm/charts/mimir-distributed/templates/overrides-exporter/overrides-exporter-dep.yaml
+++ b/operations/helm/charts/mimir-distributed/templates/overrides-exporter/overrides-exporter-dep.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.deploymentMode "microservices" }}
 {{- if .Values.overrides_exporter.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
@@ -124,3 +125,4 @@ spec:
         - name: active-queries
           emptyDir: {}
 {{- end -}}
+{{- end }}
