--- a/operations/helm/charts/mimir-distributed/templates/query-scheduler/query-scheduler-servmon.yaml
+++ b/operations/helm/charts/mimir-distributed/templates/query-scheduler/query-scheduler-servmon.yaml
@@ -1,3 +1,5 @@
+{{- if eq .Values.deploymentMode "microservices" }}
 {{- if .Values.query_scheduler.enabled }}
 {{- include "mimir.lib.serviceMonitor" (dict "ctx" $ "component" "query-scheduler") }}
 {{- end -}}
+{{- end }}
