--- a/operations/helm/charts/mimir-distributed/templates/ruler/ruler-servmon.yaml
+++ b/operations/helm/charts/mimir-distributed/templates/ruler/ruler-servmon.yaml
@@ -1,3 +1,5 @@
+{{- if eq .Values.deploymentMode "microservices" }}
 {{- if .Values.ruler.enabled -}}
 {{- include "mimir.lib.serviceMonitor" (dict "ctx" $ "component" "ruler" "memberlist" true) }}
 {{- end -}}
+{{- end }}
