--- a/operations/helm/charts/mimir-distributed/templates/compactor/compactor-statefulset.yaml
+++ b/operations/helm/charts/mimir-distributed/templates/compactor/compactor-statefulset.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.deploymentMode "microservices" }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -161,3 +162,4 @@ spec:
             {{- with .Values.compactor.extraEnvFrom }}
               {{- toYaml . | nindent 12 }}
             {{- end }}
+{{- end }}
