--- a/operations/helm/charts/mimir-distributed/templates/ingester/ingester-statefulset.yaml
+++ b/operations/helm/charts/mimir-distributed/templates/ingester/ingester-statefulset.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.deploymentMode "microservices" }}
 {{- if and .Values.ingester.enabled (not .Values.federation_frontend.disableOtherComponents) }}
 {{- $args := dict "ctx" . "component" "ingester" "memberlist" true -}}
 {{- $zonesMap := include "mimir.zoneAwareReplicationMap" $args | fromYaml -}}
@@ -215,6 +216,7 @@ spec:
             {{- end }}
           {{- end }}
 ---
+{{ end }}
 {{ end }}
 {{ end }}
 {{ end }}
