--- a/operations/helm/charts/mimir-distributed/templates/monolithic/monolithic-statefulset.yaml
+++ b/operations/helm/charts/mimir-distributed/templates/monolithic/monolithic-statefulset.yaml
@@ -1,6 +1,5 @@
-{{- if eq .Values.deploymentMode "microservices" }}
-{{- if and .Values.store_gateway.enabled (not .Values.federation_frontend.disableOtherComponents) }}
-{{- $args := dict "ctx" $ "component" "store-gateway" "memberlist" true -}}
+{{- if eq .Values.deploymentMode "monolithic" }}
+{{- $args := dict "ctx" . "component" "monolithic" "memberlist" true -}}
 {{- $zonesMap := include "mimir.zoneAwareReplicationMap" $args | fromYaml -}}
 {{- range $zoneName, $rolloutZone := $zonesMap }}
 {{- with $ -}}
@@ -15,12 +14,12 @@ metadata:
     {{- include "mimir.componentAnnotations" $args | nindent 4 }}
   namespace: {{ .Release.Namespace | quote }}
 spec:
-  podManagementPolicy: {{ .Values.store_gateway.podManagementPolicy }}
+  podManagementPolicy: {{ .Values.monolithic.podManagementPolicy }}
   replicas: {{ $rolloutZone.replicas }}
-  {{- if and (semverCompare ">= 1.23-0" (include "mimir.kubeVersion" .)) (.Values.store_gateway.persistentVolume.enableRetentionPolicy)  }}
+  {{- if and (semverCompare ">= 1.23-0" (include "mimir.kubeVersion" .)) (.Values.monolithic.persistentVolume.enableRetentionPolicy)  }}
   persistentVolumeClaimRetentionPolicy:
-    whenDeleted: {{ .Values.store_gateway.persistentVolume.whenDeleted }}
-    whenScaled: {{ .Values.store_gateway.persistentVolume.whenScaled }}
+    whenDeleted: {{ .Values.monolithic.persistentVolume.whenDeleted }}
+    whenScaled: {{ .Values.monolithic.persistentVolume.whenScaled }}
   {{- end }}
   selector:
     matchLabels:
@@ -29,21 +28,21 @@ spec:
     {{- if $zoneName }}
     type: OnDelete
     {{- else }}
-    {{- toYaml .Values.store_gateway.strategy | nindent 4 }}
+    {{- toYaml .Values.monolithic.statefulStrategy | nindent 4 }}
     {{- end }}
-  serviceName: {{ template "mimir.fullname" . }}-store-gateway{{- if not .Values.enterprise.legacyLabels -}}-headless{{- end -}}
-  {{- if .Values.store_gateway.persistentVolume.enabled }}
+  serviceName: {{ template "mimir.fullname" . }}-monolithic{{- if not .Values.enterprise.legacyLabels -}}-headless{{- end -}}
+  {{- if .Values.monolithic.persistentVolume.enabled }}
   volumeClaimTemplates:
     - apiVersion: v1
       kind: PersistentVolumeClaim
       metadata:
         name: storage
-        {{- if .Values.store_gateway.persistentVolume.annotations }}
+        {{- if .Values.monolithic.persistentVolume.annotations }}
         annotations:
-          {{- toYaml .Values.store_gateway.persistentVolume.annotations | nindent 10 }}
+          {{- toYaml .Values.monolithic.persistentVolume.annotations | nindent 10 }}
         {{- end }}
       spec:
-        {{- $storageClass := default .Values.store_gateway.persistentVolume.storageClass $rolloutZone.storageClass }}
+        {{- $storageClass := default .Values.monolithic.persistentVolume.storageClass $rolloutZone.storageClass }}
         {{- if $storageClass }}
         {{- if (eq "-" $storageClass) }}
         storageClassName: ""
@@ -52,10 +51,10 @@ spec:
         {{- end }}
         {{- end }}
         accessModes:
-          {{- toYaml .Values.store_gateway.persistentVolume.accessModes | nindent 10 }}
+          {{- toYaml .Values.monolithic.persistentVolume.accessModes | nindent 10 }}
         resources:
           requests:
-            storage: "{{ .Values.store_gateway.persistentVolume.size }}"
+            storage: "{{ .Values.monolithic.persistentVolume.size }}"
   {{- end }}
   template:
     metadata:
@@ -65,16 +64,16 @@ spec:
         {{- include "mimir.podAnnotations" $args | nindent 8 }}
       namespace: {{ .Release.Namespace | quote }}
     spec:
-      {{- with .Values.store_gateway.schedulerName }}
+      {{- with .Values.monolithic.schedulerName }}
       schedulerName: {{ . | quote }}
       {{- end }}
       serviceAccountName: {{ template "mimir.serviceAccountName" . }}
-      {{- if .Values.store_gateway.priorityClassName }}
-      priorityClassName: {{ .Values.store_gateway.priorityClassName }}
+      {{- if .Values.monolithic.priorityClassName }}
+      priorityClassName: {{ .Values.monolithic.priorityClassName }}
       {{- end }}
       securityContext:
         {{- include "mimir.lib.podSecurityContext" $args | nindent 8 }}
-      {{- with .Values.store_gateway.initContainers }}
+      {{- with .Values.monolithic.initContainers }}
       initContainers:
         {{- toYaml . | nindent 8 }}
       {{- end }}
@@ -92,12 +91,12 @@ spec:
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- include "mimir.lib.topologySpreadConstraints" (dict "ctx" . "component" "store-gateway") | nindent 6 }}
-      {{- with .Values.store_gateway.tolerations }}
+      {{- include "mimir.lib.topologySpreadConstraints" (dict "ctx" . "component" "monolithic") | nindent 6 }}
+      {{- with .Values.monolithic.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      terminationGracePeriodSeconds: {{ .Values.store_gateway.terminationGracePeriodSeconds }}
+      terminationGracePeriodSeconds: {{ .Values.monolithic.terminationGracePeriodSeconds }}
       volumes:
         - name: config
           {{- include "mimir.configVolume" . | nindent 10 }}
@@ -109,12 +108,12 @@ spec:
         - name: runtime-config
           configMap:
             name: {{ template "mimir.fullname" . }}-runtime
-        {{- if not .Values.store_gateway.persistentVolume.enabled }}
+        {{- if not .Values.monolithic.persistentVolume.enabled }}
         - name: storage
           emptyDir: {}
         {{- end }}
-        {{- if .Values.store_gateway.extraVolumes }}
-        {{ toYaml .Values.store_gateway.extraVolumes | nindent 8 }}
+        {{- if .Values.monolithic.extraVolumes }}
+        {{ toYaml .Values.monolithic.extraVolumes | nindent 8 }}
         {{- end }}
         {{- if .Values.global.extraVolumes }}
         {{ toYaml .Values.global.extraVolumes | nindent 8 }}
@@ -122,47 +121,62 @@ spec:
         - name: active-queries
           emptyDir: {}
       containers:
-        {{- if .Values.store_gateway.extraContainers }}
-        {{ toYaml .Values.store_gateway.extraContainers | nindent 8 }}
+        {{- if .Values.monolithic.extraContainers }}
+        {{ toYaml .Values.monolithic.extraContainers | nindent 8 }}
         {{- end }}
-        - name: store-gateway
+        - name: monolithic
           image: "{{ include "mimir.imageReference" . }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
-            - "-target=store-gateway"
+            - "-target=all"
             - "-config.expand-env=true"
             - "-config.file=/etc/mimir/mimir.yaml"
             {{- if $zoneName }}
+            - "-ingester.ring.instance-availability-zone={{ $zoneName }}"
             - "-store-gateway.sharding-ring.instance-availability-zone={{ $zoneName }}"
             {{- else }}
-            {{- if .Values.store_gateway.zoneAwareReplication.migration.enabled }}
+            - "-ingester.ring.instance-availability-zone=zone-default"
+            {{- if .Values.monolithic.zoneAwareReplication.migration.enabled }}
+            - "-blocks-storage.tsdb.flush-blocks-on-shutdown=true"
+            - "-ingester.ring.unregister-on-shutdown=true"
             - "-store-gateway.sharding-ring.prefix=collectors/"
             - "-store-gateway.sharding-ring.zone-awareness-enabled=false"
             {{- end }}
+            - "-server.grpc-max-concurrent-streams=500"
             {{- end }}
-            {{- range $key, $value := .Values.store_gateway.extraArgs }}
-            - -{{ $key }}={{ $value }}
+            - "-server.grpc.keepalive.max-connection-age=60s"
+            - "-server.grpc.keepalive.max-connection-age-grace=5m"
+            - "-server.grpc.keepalive.max-connection-idle=1m"
+            {{- if .Values.monolithic.compression.enabled }}
+            - "-query-frontend.grpc-client-config.grpc-compression={{ .Values.monolithic.compression.algorithm }}"
+            - "-query-scheduler.grpc-client-config.grpc-compression={{ .Values.monolithic.compression.algorithm }}"
+            - "-ruler.client.grpc-compression={{ .Values.monolithic.compression.algorithm }}"
+            - "-ruler.query-frontend.grpc-client-config.grpc-compression={{ .Values.monolithic.compression.algorithm }}"
+            - "-ingester.client.grpc-compression={{ .Values.monolithic.compression.algorithm }}"
+            {{- end }}
+            {{- range $key, $value := .Values.monolithic.extraArgs }}
+            - "-{{ $key }}={{ $value }}"
             {{- end }}
           volumeMounts:
-            {{- if .Values.store_gateway.extraVolumeMounts }}
-            {{ toYaml .Values.store_gateway.extraVolumeMounts | nindent 12}}
+            {{- if .Values.monolithic.extraVolumeMounts }}
+            {{ toYaml .Values.monolithic.extraVolumeMounts | nindent 12}}
             {{- end }}
             {{- if .Values.global.extraVolumeMounts }}
             {{ toYaml .Values.global.extraVolumeMounts | nindent 12}}
             {{- end }}
             - name: config
               mountPath: /etc/mimir
-            {{- if .Values.enterprise.enabled }}
-            - name: license
-              mountPath: /license
-            {{- end }}
             - name: runtime-config
               mountPath: /var/{{ include "mimir.name" . }}
             - name: storage
               mountPath: "/data"
-              {{- if .Values.store_gateway.persistentVolume.subPath }}
-              subPath: {{ .Values.store_gateway.persistentVolume.subPath }}
+              {{- if .Values.monolithic.persistentVolume.subPath }}
+              subPath: {{ .Values.monolithic.persistentVolume.subPath }}
               {{- end }}
+            {{- if .Values.enterprise.enabled }}
+            - name: license
+              mountPath: /license
+            {{- end }}
             - name: active-queries
               mountPath: /active-query-tracker
           ports:
@@ -176,51 +190,44 @@ spec:
               containerPort: {{ include "mimir.memberlistBindPort" . }}
               protocol: TCP
           livenessProbe:
-            {{- toYaml .Values.store_gateway.livenessProbe | nindent 12 }}
+            {{- toYaml .Values.monolithic.livenessProbe | nindent 12 }}
           readinessProbe:
-            {{- toYaml .Values.store_gateway.readinessProbe | nindent 12 }}
+            {{- toYaml .Values.monolithic.readinessProbe | nindent 12 }}
           resources:
-            {{- toYaml .Values.store_gateway.resources | nindent 12 }}
+            {{- toYaml .Values.monolithic.resources | nindent 12 }}
           securityContext:
-            {{- toYaml .Values.store_gateway.containerSecurityContext | nindent 12 }}
-          {{- $cpu_request := dig "requests" "cpu" nil .Values.store_gateway.resources }}
-          {{- $mem_request := dig "requests" "memory" nil .Values.store_gateway.resources }}
-          {{- $jaeger_queue_size := dig "jaegerReporterMaxQueueSize" nil .Values.store_gateway }}
-          {{- if or .Values.global.extraEnv .Values.store_gateway.env $cpu_request $mem_request $jaeger_queue_size }}
+            {{- toYaml .Values.monolithic.containerSecurityContext | nindent 12 }}
+          {{- $jaeger_queue_size := dig "jaegerReporterMaxQueueSize" nil .Values.monolithic }}
+          {{- if or .Values.global.extraEnv .Values.monolithic.env $jaeger_queue_size }}
           env:
+            {{- $cpu_request := dig "requests" "cpu" nil .Values.monolithic.resources }}
+            {{- if $cpu_request }}
+              {{- $cpu_request_between_3_and_6 := include "mimir.parseCPU" (dict "value" $cpu_request) | float64 | min 6 | max 3 }}
+            {{/* copy logic from operations/mimir/ingester.libsonnet */}}
+            - name: "GOMAXPROCS"
+              value: {{ addf $cpu_request $cpu_request_between_3_and_6 1 | ceil | toString | toYaml }}
+            {{- end }}
             {{- with .Values.global.extraEnv }}
               {{- toYaml . | nindent 12 }}
             {{- end }}
-            {{- with .Values.store_gateway.env }}
+            {{- with .Values.monolithic.env }}
               {{- toYaml . | nindent 12 }}
-            {{- end }}
-            {{- if $cpu_request }}
-              {{- $cpu_request_doubled := include "mimir.parseCPU" (dict "value" $cpu_request) | float64 | mulf 2 | ceil }}
-              {{- $cpu_request_plus_four := include "mimir.parseCPU" (dict "value" $cpu_request) | float64 | addf 4 | ceil }}
-            - name: "GOMAXPROCS"
-              value: {{ max $cpu_request_doubled $cpu_request_plus_four | toString | toYaml }}
-            {{- end }}
-            {{- if $mem_request }}
-            - name: "GOMEMLIMIT"
-              value: {{include "mimir.siToBytes" (dict "value" $mem_request) | toString | toYaml }}
             {{- end }}
             {{- if $jaeger_queue_size }}
             - name: "JAEGER_REPORTER_MAX_QUEUE_SIZE"
               value: {{$jaeger_queue_size | toString | toYaml }}
             {{- end }}
           {{- end }}
-          {{- if or .Values.global.extraEnvFrom .Values.store_gateway.extraEnvFrom }}
+          {{- if or .Values.global.extraEnvFrom .Values.monolithic.extraEnvFrom }}
           envFrom:
             {{- with .Values.global.extraEnvFrom }}
               {{- toYaml . | nindent 12 }}
             {{- end }}
-            {{- with .Values.store_gateway.extraEnvFrom }}
+            {{- with .Values.monolithic.extraEnvFrom }}
               {{- toYaml . | nindent 12 }}
             {{- end }}
           {{- end }}
-
 ---
-{{ end }}
 {{ end }}
 {{ end }}
 {{ end }}
