--- a/operations/helm/charts/mimir-distributed/templates/nginx/nginx-svc.yaml
+++ b/operations/helm/charts/mimir-distributed/templates/nginx/nginx-svc.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.deploymentMode "microservices" }}
 {{- if not .Values.enterprise.enabled -}}
 {{- if .Values.nginx.enabled }}
 apiVersion: v1
@@ -32,3 +33,4 @@ spec:
     {{- include "mimir.selectorLabels" (dict "ctx" . "component" "nginx") | nindent 4 }}
 {{- end -}}
 {{- end -}}
+{{- end }}
