enable publishNotReadyAddresses for monolithic service

--- a/operations/helm/charts/mimir-distributed/templates/monolithic/monolithic-svc-headless.yaml
+++ b/operations/helm/charts/mimir-distributed/templates/monolithic/monolithic-svc-headless.yaml
@@ -26,4 +26,5 @@ spec:
       targetPort: grpc
   selector:
     {{- include "mimir.selectorLabels" (dict "ctx" . "component" "monolithic" "memberlist" true) | nindent 4 }}
+  publishNotReadyAddresses: true
 {{- end }}
